# planks_and_lags

./: .gitignore  CMakeLists.txt  Lags.txt  README.markdown  planks.cpp
headers/: Calculator.h  Line.h  Plank.h
